[gd_scene load_steps=17 format=3 uid="uid://ms6kfek6qqtt"]

[ext_resource type="Script" uid="uid://buanvw04g60mf" path="res://scripts/constructions/Sintetizor.gd" id="1_0pyv0"]
[ext_resource type="Theme" uid="uid://dpreusu3w6xc7" path="res://themes/title.tres" id="2_4ci0f"]
[ext_resource type="Texture2D" uid="uid://ogxh7s6wya8a" path="res://Assets/icons/resources/hydrogenicon.png" id="3_iq3ms"]
[ext_resource type="Theme" uid="uid://suleddtvhjs3" path="res://themes/InputLine.tres" id="4_ayjek"]
[ext_resource type="Texture2D" uid="uid://dc2233wp3ycad" path="res://Assets/icons/resources/energyicon.png" id="4_ceq7v"]
[ext_resource type="Theme" uid="uid://glqysvgryhiu" path="res://themes/OutputLine.tres" id="4_o7hll"]
[ext_resource type="Theme" uid="uid://dmtuv58ptn1ef" path="res://themes/SintMeasure.tres" id="6_m0rdw"]
[ext_resource type="Texture2D" uid="uid://bprnrlptjv0yk" path="res://Assets/icons/resources/watericon.png" id="8_u2aub"]
[ext_resource type="Texture2D" uid="uid://yy47cs44sjl" path="res://Assets/icons/resources/oxygentankicon.png" id="9_tlxbp"]
[ext_resource type="FontFile" uid="uid://b4yua3jl2d103" path="res://Assets/fonts/Efourpro-OPrP.ttf" id="10_kfh1p"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kfh1p"]
bg_color = Color(0, 0.811765, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r5tii"]
bg_color = Color(0, 0.623529, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uyddd"]
bg_color = Color(0, 0.243137, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2clrb"]
bg_color = Color(0.999977, 0.575774, 0.537203, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ijd0y"]
bg_color = Color(0.965714, 0, 0.137143, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_n75mq"]
bg_color = Color(0.62427, 0, 0.0555577, 1)

[node name="SintetyzerInterface" type="Node2D"]
script = ExtResource("1_0pyv0")

[node name="Panel" type="Panel" parent="."]
modulate = Color(1, 1, 0.184314, 1)
offset_left = 1.0
offset_top = 99.0
offset_right = 41.0
offset_bottom = 148.0
scale = Vector2(28.7043, 11.1461)

[node name="SintetizadorTitle" type="Label" parent="."]
offset_left = 253.0
offset_top = 120.0
offset_right = 903.0
offset_bottom = 187.0
theme = ExtResource("2_4ci0f")
text = "Sintetizador"

[node name="HidroToEnergy" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 22.0
offset_top = -6.0
offset_right = 62.0
offset_bottom = 34.0

[node name="HidrogenIcon" type="TextureRect" parent="HidroToEnergy"]
layout_mode = 0
offset_left = 217.0
offset_top = 189.0
offset_right = 729.0
offset_bottom = 701.0
scale = Vector2(0.199607, 0.226742)
texture = ExtResource("3_iq3ms")

[node name="HidrogenInput" type="LineEdit" parent="HidroToEnergy"]
layout_mode = 0
offset_left = 376.0
offset_top = 250.0
offset_right = 443.063
offset_bottom = 281.0
theme = ExtResource("4_ayjek")
alignment = 1

[node name="EnergyOutput" type="LineEdit" parent="HidroToEnergy"]
layout_mode = 0
offset_left = 630.0
offset_top = 250.0
offset_right = 697.063
offset_bottom = 281.0
theme = ExtResource("4_o7hll")
alignment = 1
editable = false

[node name="EnergyIcon" type="TextureRect" parent="HidroToEnergy"]
layout_mode = 0
offset_left = 801.0
offset_top = 213.0
offset_right = 1313.0
offset_bottom = 725.0
scale = Vector2(0.163497, 0.163497)
texture = ExtResource("4_ceq7v")

[node name="Litros" type="Label" parent="HidroToEnergy"]
layout_mode = 0
offset_left = 465.0
offset_top = 232.0
offset_right = 505.0
offset_bottom = 293.0
theme = ExtResource("6_m0rdw")
text = "L"

[node name="AmpereHora" type="Label" parent="HidroToEnergy"]
layout_mode = 0
offset_left = 715.0
offset_top = 231.0
offset_right = 783.0
offset_bottom = 292.0
theme = ExtResource("6_m0rdw")
text = "A/h"

[node name="WaterToHidroAndOxi" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 23.0
offset_top = 110.0
offset_right = 63.0
offset_bottom = 150.0

[node name="WaterIcon" type="TextureRect" parent="WaterToHidroAndOxi"]
layout_mode = 0
offset_left = 18.0
offset_top = 194.0
offset_right = 530.0
offset_bottom = 706.0
scale = Vector2(0.199607, 0.226742)
texture = ExtResource("8_u2aub")

[node name="WaterInput" type="LineEdit" parent="WaterToHidroAndOxi"]
layout_mode = 0
offset_left = 123.0
offset_top = 257.0
offset_right = 190.063
offset_bottom = 288.0
theme = ExtResource("4_ayjek")
alignment = 1

[node name="HidrogenOutput" type="LineEdit" parent="WaterToHidroAndOxi"]
layout_mode = 0
offset_left = 569.0
offset_top = 258.0
offset_right = 636.063
offset_bottom = 289.0
theme = ExtResource("4_o7hll")
theme_override_colors/clear_button_color = Color(0, 1, 0, 1)
theme_override_colors/selection_color = Color(3.56168e-06, 0.615319, 1.73271e-06, 1)
alignment = 1
editable = false

[node name="Litros" type="Label" parent="WaterToHidroAndOxi"]
layout_mode = 0
offset_left = 205.0
offset_top = 240.0
offset_right = 245.0
offset_bottom = 301.0
theme = ExtResource("6_m0rdw")
text = "L"

[node name="Litros2" type="Label" parent="WaterToHidroAndOxi"]
layout_mode = 0
offset_left = 650.0
offset_top = 239.0
offset_right = 718.0
offset_bottom = 300.0
theme = ExtResource("6_m0rdw")
text = "L
"

[node name="HidrogenIcon" type="TextureRect" parent="WaterToHidroAndOxi"]
layout_mode = 0
offset_left = 690.0
offset_top = 197.0
offset_right = 1202.0
offset_bottom = 709.0
scale = Vector2(0.199607, 0.226742)
texture = ExtResource("3_iq3ms")

[node name="OxygenOutput" type="LineEdit" parent="WaterToHidroAndOxi"]
layout_mode = 0
offset_left = 807.0
offset_top = 258.0
offset_right = 874.063
offset_bottom = 289.0
theme = ExtResource("4_o7hll")
editable = false

[node name="Litros3" type="Label" parent="WaterToHidroAndOxi"]
layout_mode = 0
offset_left = 892.0
offset_top = 240.0
offset_right = 960.0
offset_bottom = 301.0
theme = ExtResource("6_m0rdw")
text = "L
"

[node name="OxygenIcon" type="TextureRect" parent="WaterToHidroAndOxi"]
layout_mode = 0
offset_left = 935.0
offset_top = 193.0
offset_right = 1447.0
offset_bottom = 705.0
scale = Vector2(0.199607, 0.226742)
texture = ExtResource("9_tlxbp")

[node name="EnergyAutoFill" type="LineEdit" parent="WaterToHidroAndOxi"]
layout_mode = 0
offset_left = 269.0
offset_top = 260.0
offset_right = 336.063
offset_bottom = 291.0
theme = ExtResource("4_o7hll")
alignment = 1
editable = false

[node name="AmpereHora" type="Label" parent="WaterToHidroAndOxi"]
layout_mode = 0
offset_left = 352.0
offset_top = 241.0
offset_right = 420.0
offset_bottom = 302.0
theme = ExtResource("6_m0rdw")
text = "A/h"

[node name="EnergyIcon" type="TextureRect" parent="WaterToHidroAndOxi"]
layout_mode = 0
offset_left = 431.0
offset_top = 225.0
offset_right = 943.0
offset_bottom = 737.0
scale = Vector2(0.163497, 0.163497)
texture = ExtResource("4_ceq7v")

[node name="HidroOxiToWater" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="HidrogenIcon" type="TextureRect" parent="HidroOxiToWater"]
layout_mode = 0
offset_left = 196.0
offset_top = 422.0
offset_right = 708.0
offset_bottom = 934.0
scale = Vector2(0.199607, 0.226742)
texture = ExtResource("3_iq3ms")

[node name="HidrogenInput2" type="LineEdit" parent="HidroOxiToWater"]
layout_mode = 0
offset_left = 316.0
offset_top = 487.0
offset_right = 383.063
offset_bottom = 518.0
theme = ExtResource("4_ayjek")

[node name="Litros2" type="Label" parent="HidroOxiToWater"]
layout_mode = 0
offset_left = 403.0
offset_top = 466.0
offset_right = 471.0
offset_bottom = 527.0
theme = ExtResource("6_m0rdw")
text = "L
"

[node name="OxygenIcon" type="TextureRect" parent="HidroOxiToWater"]
layout_mode = 0
offset_left = 460.0
offset_top = 423.0
offset_right = 972.0
offset_bottom = 935.0
scale = Vector2(0.199607, 0.226742)
texture = ExtResource("9_tlxbp")

[node name="OxygenInput" type="LineEdit" parent="HidroOxiToWater"]
layout_mode = 0
offset_left = 580.0
offset_top = 488.0
offset_right = 647.063
offset_bottom = 519.0
theme = ExtResource("4_ayjek")

[node name="Litros3" type="Label" parent="HidroOxiToWater"]
layout_mode = 0
offset_left = 663.0
offset_top = 471.0
offset_right = 731.0
offset_bottom = 532.0
theme = ExtResource("6_m0rdw")
text = "L
"

[node name="WaterIcon" type="TextureRect" parent="HidroOxiToWater"]
layout_mode = 0
offset_left = 888.0
offset_top = 435.0
offset_right = 1400.0
offset_bottom = 947.0
scale = Vector2(0.168721, 0.191658)
texture = ExtResource("8_u2aub")

[node name="WaterOutput" type="LineEdit" parent="HidroOxiToWater"]
layout_mode = 0
offset_left = 758.0
offset_top = 486.0
offset_right = 825.063
offset_bottom = 517.0

[node name="Litros4" type="Label" parent="HidroOxiToWater"]
layout_mode = 0
offset_left = 839.0
offset_top = 470.0
offset_right = 907.0
offset_bottom = 595.0
theme = ExtResource("6_m0rdw")
text = "L
"

[node name="Confirm" type="Button" parent="."]
offset_left = 823.0
offset_top = 561.0
offset_right = 1023.0
offset_bottom = 615.0
theme_override_fonts/font = ExtResource("10_kfh1p")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_kfh1p")
theme_override_styles/hover = SubResource("StyleBoxFlat_r5tii")
theme_override_styles/normal = SubResource("StyleBoxFlat_uyddd")
text = "Confirmar"

[node name="Apagar" type="Button" parent="."]
offset_left = 533.0
offset_top = 563.0
offset_right = 659.0
offset_bottom = 617.0
theme_override_fonts/font = ExtResource("10_kfh1p")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_2clrb")
theme_override_styles/hover = SubResource("StyleBoxFlat_ijd0y")
theme_override_styles/normal = SubResource("StyleBoxFlat_n75mq")
text = "Apagar"

[node name="ConfirmEraseWindow" type="Window" parent="."]
title = "Apagar"
position = Vector2i(400, 300)
size = Vector2i(400, 200)
visible = false
content_scale_size = Vector2i(20, 20)

[node name="Yes" type="Button" parent="ConfirmEraseWindow"]
offset_left = 3.0
offset_top = 150.0
offset_right = 94.0
offset_bottom = 197.0
theme_override_fonts/font = ExtResource("10_kfh1p")
theme_override_font_sizes/font_size = 25
text = "Sim"

[node name="Description" type="Label" parent="ConfirmEraseWindow"]
offset_left = 14.0
offset_top = 69.0
offset_right = 400.0
offset_bottom = 104.0
theme_override_font_sizes/font_size = 25
text = "Tem certeza que deseja apagar?"

[node name="No" type="Button" parent="ConfirmEraseWindow"]
offset_left = 308.0
offset_top = 152.0
offset_right = 399.0
offset_bottom = 199.0
theme_override_fonts/font = ExtResource("10_kfh1p")
theme_override_font_sizes/font_size = 25
text = "Não"

[node name="Voltar" type="Button" parent="."]
offset_left = 193.0
offset_top = 562.0
offset_right = 322.0
offset_bottom = 616.0
theme_override_fonts/font = ExtResource("10_kfh1p")
theme_override_font_sizes/font_size = 30
text = "Voltar"

[connection signal="text_changed" from="HidroToEnergy/HidrogenInput" to="." method="_on_hidrogen_input_text_changed"]
[connection signal="text_changed" from="WaterToHidroAndOxi/WaterInput" to="." method="_on_water_input_text_changed"]
[connection signal="text_changed" from="HidroOxiToWater/HidrogenInput2" to="." method="_on_hidrogen_input_2_text_changed"]
[connection signal="text_changed" from="HidroOxiToWater/OxygenInput" to="." method="_on_oxygen_input_text_changed"]
[connection signal="pressed" from="Confirm" to="." method="_on_confirm_pressed"]
[connection signal="pressed" from="Apagar" to="." method="_on_apagar_pressed"]
[connection signal="pressed" from="ConfirmEraseWindow/Yes" to="." method="_on_yes_pressed"]
[connection signal="pressed" from="ConfirmEraseWindow/No" to="." method="_on_no_pressed"]
[connection signal="pressed" from="Voltar" to="." method="_on_voltar_pressed"]
